# NexusChatCluster

./: CMakeLists.txt  README.md  chat.sql  nginx.conf  user.proto
include/: public.hpp  user.pb.h
include/client/: chatclient.hpp  clientservice.hpp
include/proxy/: proxyserver.hpp  proxyservice.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.hpp
include/server/model/: friendmodel.hpp  groupmodel.hpp  offlinemessagemodel.hpp  usermodel.hpp
rpc/: rpcapplication.cc  rpcchannel.cc  rpcconfig.cc  rpccontroller.cc  rpcheader.pb.cc  rpcprovider.cc  zookeeperutil.cc
rpc/include/: rpcapplication.h  rpcchannel.h  rpccontroller.h  rpcheader.pb.h  rpcprovider.h
src/: CMakeLists.txt  user.pb.cc
src/client/: CMakeLists.txt  chatclient.cpp  clientservice.cpp  main.cpp
src/proxy/: CMakeLists.txt  main.cpp  proxyserver.cpp  proxyservice.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
